# htmlPdf

./: .gitignore  README.md  input1.html  pyproject.toml  requirements.txt  sample.py  script2.py  target.html  test.py  upgrade.txt
.github/workflows/: lint.yml  static_analysis.yml  translator_workflow.yml
app/: gui.py  html_translation.py  main.py  translation_api.py
app/tests/: api_test.py  gui_test.py  html_translation_test.py  main_test.py
